# journeygraph

./: .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  privacy.md  product-brief.md  real-trace-discovery.md  releasing.md  schema.md  testing.md
docs/exec-plans/: README.md  journeygraph-mvp.md  pypi-trusted-publishing.md  real-trace-discovery.md
docs/research/examples/: real-trace-evidence.synthetic.json
docs/research/schemas/: real-trace-evidence-v1.schema.json
scripts/: benchmark.py  check_docs.py  verify_distribution.py  verify_published.py  verify_wheel.py
src/journeygraph/: __init__.py  __main__.py  api.py  cli.py  exceptions.py  version.py
src/journeygraph/analytics/: __init__.py  _adapters.py  analyzer.py  metrics.py
src/journeygraph/data/: __init__.py  demo.jsonl
src/journeygraph/domain/: __init__.py  models.py
src/journeygraph/graph/: __init__.py  builder.py  models.py
src/journeygraph/ingestion/: __init__.py  otlp.py  readers.py
src/journeygraph/normalization/: __init__.py  pipeline.py  privacy.py
src/journeygraph/reporting/: __init__.py  html.py  serialize.py  svg.py  writer.py
src/journeygraph/schemas/: __init__.py  analysis-v1.schema.json  event-v1.schema.json
tests_functional/: __init__.py  conftest.py  helpers.py  test_analysis_acceptance.py  test_demo_and_cli.py  test_parquet_cli.py  test_validation_privacy_and_safety.py
tests_functional/fixtures/: branching.jsonl  duplicate_conflict.jsonl  duplicate_exact.jsonl  handoff_dropoff_metrics.jsonl  injection.jsonl  invalid_infinity.jsonl  invalid_nan.jsonl  invalid_numeric.jsonl  invalid_status.jsonl  invalid_timestamp.jsonl  linear.jsonl  malformed.jsonl  missing_required.csv  missing_required.jsonl  otlp_trace.json  out_of_order_a.jsonl  out_of_order_b.jsonl  repeated_failure_handoff.jsonl  retry_loop.jsonl  sensitive_metadata.jsonl  unicode.jsonl
tests_integration/formats/: test_canonical_formats.py
tests_integration/ingestion/: test_otlp_json.py
tests_unit/: test_research_evidence.py  test_verify_distribution.py  test_verify_published.py
tests_unit/analytics/: conftest.py  test_analyzer.py  test_metrics.py  test_mutation_contracts.py
tests_unit/domain/: test_models.py
tests_unit/graph/: test_builder.py
tests_unit/normalization/: test_pipeline.py  test_privacy.py  test_properties.py
tests_unit/reporting/: test_reporting.py  test_writer.py
